# streamdeck-osmapper

./: Cargo.toml  osm.ini
src/: main.rs
templates/: osm.xml
xmlproc/: proc.py
