[package]
name = "streamdeck-osmapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
streamdeck = "0.7.0"
unbounded-gpsd = "0.5.1"
rusttype = "0.9.2"
chrono = "0.4.23"
sqlite = "0.32.0"
ini = "1.3.0"
askama = "0.12.1"
